--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,8 @@
 title: Parenti Texts
 email: parentitexts@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Ongoing effort to transcribe Michael Parenti's speeches. 
+  Also serves as an archive of content from now-expired official Michael Parenti website.
 baseurl: "/parentitexts" # the subpath of your site, e.g. /blog
 url: "https://tsutherland.me" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
