--- a/_config.yml
+++ b/_config.yml
@@ -21,11 +21,11 @@
 title: Parenti Texts
 email: parentitexts@protonmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Ongoing effort to transcribe Michael Parenti's speeches. Check out https://www.michael-parenti.org/ for more Michael Parenti! (unaffiliated)
+  Ongoing effort to transcribe Michael Parenti's speeches. Check out https://www.michael-parenti.org/ for more Michael Parenti!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "parentitexts.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  parentitexts
 
 # Build settings
 theme: minima 
